[package]
name = "rslox"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
thiserror = "1.0.24"
unicode-segmentation = "1.7.1"

[lib]
name = "rslox"
path = "src/lib/lib.rs"

[[bin]]
name = "rslox-int"
path = "src/main.rs"